@@ -94,6 +94,7 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.annotation.SubstrateAnnotationExtractor;
 import com.oracle.svm.hosted.option.HostedOptionParser;
 import com.oracle.svm.util.ClassUtil;
+import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
 import com.oracle.svm.util.ReflectionUtil;
 
@@ -378,7 +379,7 @@ public class NativeImageClassLoaderSupport {
     }
 
     protected List<Path> modulepath() {
-        return Stream.concat(imagemp.stream(), buildmp.stream()).collect(Collectors.toUnmodifiableList());
+        return Stream.concat(imagemp.stream(), buildmp.stream()).toList();
     }
 
     protected List<Path> applicationModulePath() {
@@ -433,7 +434,7 @@ public class NativeImageClassLoaderSupport {
         for (ModuleLayer moduleLayer : allLayers(layer)) {
             List<ResolvedModule> resolvedModules = moduleLayer.configuration().modules().stream()
                             .sorted(Comparator.comparing(ResolvedModule::name))
-                            .collect(Collectors.toList());
+                            .toList();
             if (first) {
                 try {
                     initOutputMethod.invoke(null, false);
@@ -515,7 +516,7 @@ public class NativeImageClassLoaderSupport {
                      * be tolerant if invalid --add-exports -add-opens or --add-reads options are
                      * used. GR-30433
                      */
-                    System.out.println("Warning: " + e.getMessage());
+                    LogUtils.warning(e.getMessage());
                     return Stream.empty();
                 }
             }
@@ -543,23 +544,48 @@ public class NativeImageClassLoaderSupport {
         String format = reads ? NativeImageClassLoaderOptions.AddReadsFormat : NativeImageClassLoaderOptions.AddExportsAndOpensFormat;
         String syntaxErrorMessage = " Allowed value format: " + format;
 
-        String[] modulePackageAndTargetModules = optionValue.split("=", 2);
-        if (modulePackageAndTargetModules.length != 2) {
+        /*
+         * Parsing logic mimics jdk.internal.module.ModuleBootstrap.decode(String)
+         */
+
+        int equalsPos = optionValue.indexOf("=");
+        if (equalsPos <= 0) {
             throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
         }
-        String modulePackage = modulePackageAndTargetModules[0];
-        String targetModuleNames = modulePackageAndTargetModules[1];
 
-        String[] moduleAndPackage = modulePackage.split("/");
-        if (moduleAndPackage.length > 1 + (reads ? 0 : 1)) {
+        String modulePackage = optionValue.substring(0, equalsPos);
+        String targetModuleNames = optionValue.substring(equalsPos + 1);
+
+        if (targetModuleNames.isEmpty()) {
             throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
         }
-        String moduleName = moduleAndPackage[0];
-        String packageName = moduleAndPackage.length > 1 ? moduleAndPackage[1] : null;
 
-        List<String> targetModuleNamesList = Arrays.asList(targetModuleNames.split(","));
+        List<String> targetModuleNamesList = new ArrayList<>();
+        for (String s : targetModuleNames.split(",")) {
+            if (!s.isEmpty()) {
+                targetModuleNamesList.add(s);
+            }
+        }
         if (targetModuleNamesList.isEmpty()) {
             throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+        }
+
+        String moduleName;
+        String packageName;
+        if (reads) {
+            moduleName = modulePackage;
+            packageName = null;
+        } else {
+            String[] moduleAndPackage = modulePackage.split("/");
+            if (moduleAndPackage.length != 2) {
+                throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+            }
+
+            moduleName = moduleAndPackage[0];
+            packageName = moduleAndPackage[1];
+            if (moduleName.isEmpty() || packageName.isEmpty()) {
+                throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+            }
         }
 
         Module module = findModule(moduleName).orElseThrow(() -> {
@@ -635,7 +661,9 @@ public class NativeImageClassLoaderSupport {
 
                 List<String> requiresInit = Arrays.asList(
                                 "jdk.internal.vm.ci", "jdk.internal.vm.compiler", "com.oracle.graal.graal_enterprise",
-                                "org.graalvm.sdk", "org.graalvm.truffle");
+                                "org.graalvm.sdk", "org.graalvm.truffle", "org.graalvm.truffle.runtime",
+                                "org.graalvm.truffle.compiler", "com.oracle.truffle.enterprise", "org.graalvm.jniutils",
+                                "org.graalvm.nativebridge");
 
                 for (ModuleReference moduleReference : upgradeAndSystemModuleFinder.findAll()) {
                     if (requiresInit.contains(moduleReference.descriptor().name())) {
@@ -713,8 +741,7 @@ public class NativeImageClassLoaderSupport {
             boolean useFilter = root.equals(excludeRoot);
             if (useFilter) {
                 String excludesStr = excludes.stream().map(Path::toString).collect(Collectors.joining(", "));
-                System.err.println("Warning: Using directory " + excludeRoot + " on classpath is discouraged." +
-                                " Reading classes/resources from directories " + excludesStr + " will be suppressed.");
+                LogUtils.warning("Using directory %s on classpath is discouraged. Reading classes/resources from directories %s will be suppressed.", excludeRoot, excludesStr);
             }
             FileVisitor<Path> visitor = new SimpleFileVisitor<>() {
                 private final char fileSystemSeparatorChar = root.getFileSystem().getSeparator().charAt(0);
@@ -780,7 +807,7 @@ public class NativeImageClassLoaderSupport {
                         }
                     });
                 } catch (Exception e) {
-                    System.out.println("Warning: Image builder cannot read service configuration file " + fileName);
+                    LogUtils.warning("Image builder cannot read service configuration file " + fileName);
                 }
                 if (!providerNames.isEmpty()) {
                     LinkedHashSet<String> providersForService = serviceProviders(serviceName);
@@ -879,7 +906,7 @@ public class NativeImageClassLoaderSupport {
                                             "As a workaround, %s allows turning this error into a warning. Note that this option is deprecated and will be removed in a future version.");
                             throw UserError.abort(errorMessage, SubstrateOptionsParser.commandArgument(SubstrateOptions.AllowDeprecatedBuilderClassesOnImageClasspath, "+"));
                         } else {
-                            System.out.println("Warning: " + message);
+                            LogUtils.warning(message);
                         }
                     }
                 }
